@@ -1,3 +1,11 @@
+2005-09-06	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-icon-view.c(exo_icon_view_set_model): Reset the item memory
+	  chunk as a whole instead of freeing each item when the model is
+	  reset.
+	* exo/exo-icon-view.c(exo_icon_view_set_model): Don't schedule the
+	  layouting if we're going to resize the view anyways.
+
 2005-09-04	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-icon-view.c(find_item_page_up_down): Fix Page_Up handling.
